# aw-gateway-rs

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  sensors.json  settings.toml  settings_default.toml
.github/workflows/: docker-image-release.yml  docker-image.yaml  docker-image.yml  release.yaml
src/: gateway.rs  main.rs
