[package]
name = "aw-gateway-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
clokwerk = "0.4.0"
byte-unit = { version = "5.1.2" }
flexi_logger = { version = "0.27.3", features = ["compress"] }
rumqttc = { version = "0.23.0", features = ["url"] }
